# logit_cot_overthinking

./: .gitignore  README.md  plan.md  pyproject.toml
lesswrong/: blog.md  qualitative_examples.md
outputs/: trace_extensions_gemma4_12b_manifest.json
outputs/activation_probe_gemma4_12b/: activation_manifest.json  activation_probe_examples.parquet  activation_probe_report.md  activation_probe_summary.json  probe_halting_summary.parquet  probe_metrics.parquet
outputs/activation_probe_gemma4_12b/activations_shards/: manifest.json
outputs/activation_probe_gemma4_12b/models/: layer_000.npz  layer_004.npz  layer_008.npz  layer_012.npz  layer_016.npz  layer_020.npz  layer_024.npz  layer_028.npz  layer_032.npz  layer_036.npz  layer_040.npz  layer_044.npz  layer_048.npz
outputs/activation_probe_gemma4_12b_smoke/: activation_manifest.json  activation_probe_examples.parquet
outputs/activation_probe_gemma4_12b_smoke_b4/: activation_manifest.json  activation_probe_examples.parquet
outputs/activation_probe_gemma4_12b_smoke_sorted/: activation_manifest.json  activation_probe_examples.parquet
outputs/branching_intervention_gemma4_12b/: branch_candidates.parquet  branch_requests.jsonl  branch_requests.parquet  branching_manifest.json
outputs/candidate_reruns_gemma4_12b/: manifest.json
outputs/candidate_reruns_gemma4_12b_extended/analysis/: candidate_stability.parquet  seed_attempts.parquet  seed_report.md  seed_summary.json
outputs/cross_model_replication/: commands.md  manifest.json
outputs/extension_smoke_gpqa_seed0/: summary.json  traces.jsonl  trajectory.parquet
outputs/gpqa_diamond_gemma4_12b_seed0/: analysis.md  summary.json  trajectory.parquet
outputs/gpqa_diamond_gemma4_12b_seed0/lost_analysis/: lost_cases.parquet  lost_report.md  lost_summary.json  robust_lost_cases.csv
outputs/gpqa_diamond_gemma4_12b_seed0_extended/: summary.json  trajectory.parquet
outputs/gpqa_diamond_gemma4_12b_seed0_extended/lost_analysis/: lost_cases.parquet  lost_report.md  lost_summary.json  robust_lost_cases.csv
outputs/gpqa_diamond_gemma4_12b_smoke/: summary.json  traces.jsonl  trajectory.parquet
outputs/matched_controls_gemma4_12b/: cohort_selection.parquet  manifest.json
outputs/matched_controls_gemma4_12b_extended/: extension_manifest.json
outputs/matched_controls_gemma4_12b_extended/analysis/: attempts.parquet  cohort_summary.parquet  currently_correct_checkpoints.parquet  matched_contrasts.parquet  matched_control_report.md  matched_control_summary.json  predictive_coefficients.parquet  predictive_metrics.parquet
outputs/mmlu_pro_gemma4_12b_n1000_seed0/: summary.json
outputs/mmlu_pro_gemma4_12b_n1000_seed0/lost_analysis/: lost_cases.parquet  lost_report.md  lost_summary.json  robust_lost_cases.csv
outputs/mmlu_pro_gemma4_12b_n1000_seed0_extended/: summary.json
outputs/smoke/: summary.json  traces.jsonl  trajectory.parquet
outputs/trace_extension_analysis_gemma4_12b/: extended_traces.parquet  extension_report.md  extension_summary.json
src/logit_cot_overthinking/: __init__.py  activation_probe.py  activation_probe_cli.py  branching_intervention.py  branching_intervention_cli.py  candidate_reruns.py  candidate_reruns_cli.py  cli.py  confidence_recurrence.py  confidence_recurrence_cli.py  config.py  cross_model_replication.py  cross_model_replication_cli.py  data.py  early_commitment.py  early_commitment_cli.py  extension_analysis.py  extension_analysis_cli.py  gemma.py  lost_analysis.py  lost_analysis_cli.py  matched_analysis.py  matched_analysis_cli.py  matched_controls.py  matched_controls_cli.py  matched_extension_cli.py  metrics.py  pipeline.py  seed_analysis.py  seed_analysis_cli.py  trace_extension.py  trace_extension_cli.py  visualization.py  visualize_cli.py
tests/: test_activation_probe.py  test_branching_intervention.py  test_candidate_reruns.py  test_confidence_recurrence.py  test_config.py  test_cross_model_replication.py  test_data.py  test_early_commitment.py  test_extension_analysis.py  test_gemma.py  test_lost_analysis.py  test_matched_analysis.py  test_matched_controls.py  test_metrics.py  test_pipeline.py  test_seed_analysis.py  test_trace_extension.py  test_visualization.py
workshop/: README.md  main.tex  references.bib
(+223 files in other folders)
