[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "logit-cot-overthinking"
version = "0.1.0"
description = "Logit-based trajectory probing for reasoning traces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==5.0.0",
    "matplotlib==3.10.8",
    "ninja==1.13.0",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pyarrow==24.0.0",
    "transformers==5.12.0",
    "vllm==0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
]

[project.scripts]
trajectory-probe = "logit_cot_overthinking.cli:main"
trajectory-visualize = "logit_cot_overthinking.visualize_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
