[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "logit-cot-overthinking"
version = "0.1.0"
description = "Logit-based trajectory probing for reasoning traces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==5.0.0",
    "matplotlib==3.10.8",
    "ninja==1.13.0",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pyarrow==24.0.0",
    "transformers==5.12.0",
    "vllm==0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
]

[project.scripts]
trajectory-probe = "logit_cot_overthinking.cli:main"
trajectory-visualize = "logit_cot_overthinking.visualize_cli:main"
trajectory-analyze-lost = "logit_cot_overthinking.lost_analysis_cli:main"
trajectory-rerun-candidates = "logit_cot_overthinking.candidate_reruns_cli:main"
trajectory-extend-capped = "logit_cot_overthinking.trace_extension_cli:main"
trajectory-analyze-seeds = "logit_cot_overthinking.seed_analysis_cli:main"
trajectory-analyze-extensions = "logit_cot_overthinking.extension_analysis_cli:main"
trajectory-run-matched-controls = "logit_cot_overthinking.matched_controls_cli:main"
trajectory-analyze-matched-controls = "logit_cot_overthinking.matched_analysis_cli:main"
trajectory-extend-matched-controls = "logit_cot_overthinking.matched_extension_cli:main"
trajectory-analyze-confidence-recurrence = "logit_cot_overthinking.confidence_recurrence_cli:main"
trajectory-analyze-early-commitment = "logit_cot_overthinking.early_commitment_cli:main"
trajectory-run-branching-intervention = "logit_cot_overthinking.branching_intervention_cli:main"
trajectory-plan-cross-model-replication = "logit_cot_overthinking.cross_model_replication_cli:main"
trajectory-train-activation-probes = "logit_cot_overthinking.activation_probe_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
